// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminStudentSearchTableComponent should snap with a deleted course 1`] = `
<tm-admin-student-search-table
  accountService={[Function AccountService]}
  emailGenerationService={[Function EmailGenerationService]}
  isRegeneratingStudentKeys={[Function Array]}
  searchString=""
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
  studentReset={[Function EventEmitter_]}
  studentService={[Function StudentService]}
  students={[Function Array]}
>
  <div
    class="card bg-light top-padded"
  >
    <div
      class="card-header bg-primary text-white"
    >
      <strong>
        Students Found
      </strong>
      <div
        class="card-header-btn-toolbar"
      >
        <button
          class="btn btn-light btn-sm"
          id="show-student-links"
          style="margin-right: 10px;"
          type="button"
        >
           Expand All 
        </button>
        <button
          class="btn btn-light btn-sm"
          id="hide-student-links"
          type="button"
        >
           Collapse All 
        </button>
      </div>
    </div>
    <div
      class="table-responsive"
    >
      <table
        class="table table-striped data-table"
        id="search-table-student"
      >
        <thead>
          <tr>
            <th>
              Course [Section] (Team)
            </th>
            <th>
              Name
            </th>
            <th>
              Google ID
            </th>
            <th>
              Institute
            </th>
            <th>
              Comments
            </th>
            <th>
              Options
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <span
                class="text-break ngb-tooltip-class text-course-deleted"
              >
                deleted-course [section] (team)
              </span>
              <i
                class="fas fa-trash-alt text-course-deleted margin-left-5px bin-icon"
              />
              <br />
              <div
                class="col-sm-1"
              >
                <button
                  aria-label="Expand"
                  class="btn"
                >
                  <i
                    class="fas fa-chevron-circle-down"
                    style="color: blue;"
                  />
                </button>
              </div>
            </td>
            <td>
              <a
                href="profile-page-link"
                rel="noopener noreferrer"
                target="_blank"
              >
                student
              </a>
            </td>
            <td>
              <a
                href="home-page-link"
                rel="noopener noreferrer"
                target="_blank"
              >
                student-google-id
              </a>
            </td>
            <td>
              institute
            </td>
            <td>
              comments
            </td>
            <td>
              <a
                href="manage-account-link"
                rel="noopener noreferrer"
                target="_blank"
              >
                <i
                  class="fas fa-info-circle"
                />
                 Manage this account 
              </a>
              <br />
              <a
                href="javascript:;"
                id="reset-student-id-0"
              >
                <i
                  class="fas fa-sync"
                />
                 Reset Google ID 
              </a>
              <br />
              <button
                class="btn btn-danger"
                data-testid="regenerate-student-key"
                id="regenerate-student-key-0"
              >
                 Regenerate key 
              </button>
            </td>
          </tr>
          <tr>
            <td
              colspan="6"
            >
              <ul
                class="list-group collapse"
              >
                <li
                  class="list-group-item list-group-item-success has-success"
                >
                  <strong>
                    Email
                  </strong>
                  <input
                    class="form-control"
                    disabled=""
                  />
                </li>
                <li
                  class="list-group-item list-group-item-info"
                >
                  <strong>
                    Course Join Link
                  </strong>
                  <button
                    class="btn btn-primary margin-left-5px btn-sm"
                    data-testid="send-course-join-button"
                    type="button"
                  >
                     Send mail 
                  </button>
                  <input
                    class="form-control"
                    disabled=""
                  />
                </li>
                <li
                  class="list-group-item list-group-item-light"
                >
                  <strong>
                    sessionName startTime - endTime
                  </strong>
                  <button
                    class="btn btn-primary margin-left-5px btn-sm"
                    data-testid="send-awaiting-session-reminder-button"
                    type="button"
                  >
                     Send mail 
                  </button>
                  <input
                    class="form-control"
                    disabled=""
                  />
                </li>
                <li
                  class="list-group-item list-group-item-warning"
                >
                  <strong>
                    sessionName startTime - endTime
                  </strong>
                  <button
                    class="btn btn-primary margin-left-5px btn-sm"
                    data-testid="send-open-session-reminder-button"
                    type="button"
                  >
                     Send mail 
                  </button>
                  <input
                    class="form-control"
                    disabled=""
                  />
                </li>
                <li
                  class="list-group-item list-group-item-danger"
                >
                  <strong>
                    sessionName startTime - endTime
                  </strong>
                  <button
                    class="btn btn-primary margin-left-5px btn-sm"
                    data-testid="send-not-open-session-reminder-button"
                    type="button"
                  >
                     Send mail 
                  </button>
                  <input
                    class="form-control"
                    disabled=""
                  />
                </li>
                <li
                  class="list-group-item list-group-item-success"
                >
                  <strong>
                    sessionName startTime - endTime
                  </strong>
                  <button
                    class="btn btn-primary margin-left-5px btn-sm"
                    data-testid="send-published-session-reminder-button"
                    type="button"
                  >
                     Send mail 
                  </button>
                  <input
                    class="form-control"
                    disabled=""
                  />
                </li>
              </ul>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</tm-admin-student-search-table>
`;

exports[`AdminStudentSearchTableComponent should snap with an expanded student table 1`] = `
<tm-admin-student-search-table
  accountService={[Function AccountService]}
  emailGenerationService={[Function EmailGenerationService]}
  isRegeneratingStudentKeys={[Function Array]}
  searchString=""
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
  studentReset={[Function EventEmitter_]}
  studentService={[Function StudentService]}
  students={[Function Array]}
>
  <div
    class="card bg-light top-padded"
  >
    <div
      class="card-header bg-primary text-white"
    >
      <strong>
        Students Found
      </strong>
      <div
        class="card-header-btn-toolbar"
      >
        <button
          class="btn btn-light btn-sm"
          id="show-student-links"
          style="margin-right: 10px;"
          type="button"
        >
           Expand All 
        </button>
        <button
          class="btn btn-light btn-sm"
          id="hide-student-links"
          type="button"
        >
           Collapse All 
        </button>
      </div>
    </div>
    <div
      class="table-responsive"
    >
      <table
        class="table table-striped data-table"
        id="search-table-student"
      >
        <thead>
          <tr>
            <th>
              Course [Section] (Team)
            </th>
            <th>
              Name
            </th>
            <th>
              Google ID
            </th>
            <th>
              Institute
            </th>
            <th>
              Comments
            </th>
            <th>
              Options
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <span
                class="text-break ngb-tooltip-class"
              >
                test-exa.demo [section] (team)
              </span>
              <br />
              <div
                class="col-sm-1"
              >
                <button
                  aria-label="Collapse"
                  class="btn"
                >
                  <i
                    class="fas fa-chevron-circle-up"
                    style="color: blue;"
                  />
                </button>
              </div>
            </td>
            <td>
              <a
                href="profile-page-link"
                rel="noopener noreferrer"
                target="_blank"
              >
                Alice Betsy
              </a>
            </td>
            <td>
              <a
                href="home-page-link"
                rel="noopener noreferrer"
                target="_blank"
              >
                student-google-id
              </a>
            </td>
            <td>
              institute
            </td>
            <td>
              comments
            </td>
            <td>
              <a
                href="manage-account-link"
                rel="noopener noreferrer"
                target="_blank"
              >
                <i
                  class="fas fa-info-circle"
                />
                 Manage this account 
              </a>
              <br />
              <a
                href="javascript:;"
                id="reset-student-id-0"
              >
                <i
                  class="fas fa-sync"
                />
                 Reset Google ID 
              </a>
              <br />
              <button
                class="btn btn-danger"
                data-testid="regenerate-student-key"
                id="regenerate-student-key-0"
              >
                 Regenerate key 
              </button>
            </td>
          </tr>
          <tr>
            <td
              colspan="6"
            >
              <ul
                class="list-group collapse show"
              >
                <li
                  class="list-group-item list-group-item-success has-success"
                >
                  <strong>
                    Email
                  </strong>
                  <input
                    class="form-control"
                    disabled=""
                  />
                </li>
                <li
                  class="list-group-item list-group-item-info"
                >
                  <strong>
                    Course Join Link
                  </strong>
                  <button
                    class="btn btn-primary margin-left-5px btn-sm"
                    data-testid="send-course-join-button"
                    type="button"
                  >
                     Send mail 
                  </button>
                  <input
                    class="form-control"
                    disabled=""
                  />
                </li>
                <li
                  class="list-group-item list-group-item-light"
                >
                  <strong>
                    sessionName startTime - endTime
                  </strong>
                  <button
                    class="btn btn-primary margin-left-5px btn-sm"
                    data-testid="send-awaiting-session-reminder-button"
                    type="button"
                  >
                     Send mail 
                  </button>
                  <input
                    class="form-control"
                    disabled=""
                  />
                </li>
                <li
                  class="list-group-item list-group-item-warning"
                >
                  <strong>
                    sessionName startTime - endTime
                  </strong>
                  <button
                    class="btn btn-primary margin-left-5px btn-sm"
                    data-testid="send-open-session-reminder-button"
                    type="button"
                  >
                     Send mail 
                  </button>
                  <input
                    class="form-control"
                    disabled=""
                  />
                </li>
                <li
                  class="list-group-item list-group-item-danger"
                >
                  <strong>
                    sessionName startTime - endTime
                  </strong>
                  <button
                    class="btn btn-primary margin-left-5px btn-sm"
                    data-testid="send-not-open-session-reminder-button"
                    type="button"
                  >
                     Send mail 
                  </button>
                  <input
                    class="form-control"
                    disabled=""
                  />
                </li>
                <li
                  class="list-group-item list-group-item-success"
                >
                  <strong>
                    sessionName startTime - endTime
                  </strong>
                  <button
                    class="btn btn-primary margin-left-5px btn-sm"
                    data-testid="send-published-session-reminder-button"
                    type="button"
                  >
                     Send mail 
                  </button>
                  <input
                    class="form-control"
                    disabled=""
                  />
                </li>
              </ul>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</tm-admin-student-search-table>
`;
